--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "techstock-manager",
+  "homepage": "https://yassinebenhamzah.github.io/demo-tech-mat/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,8 @@
   "dev": "vite",
   "build": "vite build",
   "preview": "vite preview",
-  "deploy": "npm run build && gh-pages -d dist"
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
 },
   "dependencies": {
     "lucide-react": "^0.562.0",
